--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --npmweb",
+    "eject": "expo eject",
+    "lint": "eslint ."
   },
   "dependencies": {
     "expo": "~41.0.1",
@@ -16,7 +17,10 @@
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "eslint": "^7.28.0",
+    "eslint-plugin-react": "^7.24.0"
   },
   "private": true
 }
