--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-pie": "^0.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-image-picker": "~10.1.4",
+    "expo-camera": "~11.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
