--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.21.1",
     "expo": "~41.0.1",
     "expo-camera": "~11.0.2",
     "expo-image-manipulator": "~9.1.0",
@@ -28,7 +29,8 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
-    "react-router-native": "^5.2.0"
+    "react-router-native": "^5.2.0",
+    "rxjs": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
