--- a/client/package.json
+++ b/client/package.json
@@ -36,11 +36,7 @@
     "@babel/core": "^7.9.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "eslint": "^7.28.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react": "^7.24.0"
   },
   "private": true
 }
