--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "jest --passWithNoTests"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/jonbrook/flora/issues"
   },
-  "homepage": "https://github.com/jonbrook/flora#readme"
+  "homepage": "https://github.com/jonbrook/flora#readme",
+  "devDependencies": {
+    "jest": "^27.0.4"
+  }
 }
