--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "ios": "expo start --ios",
     "web": "expo start --npmweb",
     "eject": "expo eject",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "dependencies": {
     "@google-cloud/automl": "^2.4.2",
@@ -34,10 +35,16 @@
     "rxjs": "^7.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/react-native": "^7.2.0",
+    "babel-jest": "^27.0.2",
     "eslint": "^7.28.0",
-    "eslint-plugin-react": "^7.24.0"
+    "eslint-plugin-react": "^7.24.0",
+    "jest": "^27.0.4",
+    "react-test-renderer": "^17.0.2"
   },
   "private": true
 }
