--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "web": "expo start --npmweb",
     "eject": "expo eject",
     "lint": "eslint .",
-    "test": "jest"
+    "test": "jest --passWithNoTests"
   },
   "dependencies": {
     "@google-cloud/automl": "^2.4.2",
