--- a/package.json
+++ b/package.json
@@ -16,8 +16,5 @@
   "bugs": {
     "url": "https://github.com/jonbrook/flora/issues"
   },
-  "homepage": "https://github.com/jonbrook/flora#readme",
-  "devDependencies": {
-    "jest": "^27.0.4"
-  }
+  "homepage": "https://github.com/jonbrook/flora#readme"
 }
