--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@testing-library/dom": "^7.31.2",
     "axios": "^0.21.1",
     "expo": "~41.0.1",
     "expo-camera": "~11.0.2",
@@ -22,6 +23,7 @@
     "expo-image-picker": "~10.1.4",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
+    "jest-expo": "^41.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
@@ -39,6 +41,7 @@
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/jest-native": "^4.0.1",
     "@testing-library/react-native": "^7.2.0",
     "babel-jest": "^27.0.2",
     "eslint": "^7.28.0",
@@ -46,5 +49,11 @@
     "jest": "^27.0.4",
     "react-test-renderer": "^17.0.2"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ]
+  }
 }
