--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "web": "expo start --npmweb",
     "eject": "expo eject",
     "lint": "eslint .",
-    "test": "jest --passWithNoTests"
+    "test": "jest"
   },
   "dependencies": {
     "@google-cloud/automl": "^2.4.2",
@@ -39,12 +39,22 @@
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/dom": "^7.31.2",
+    "@testing-library/jest-native": "^4.0.1",
     "@testing-library/react-native": "^7.2.0",
+    "@testing-library/user-event": "^13.1.9",
     "babel-jest": "^27.0.2",
     "eslint": "^7.28.0",
     "eslint-plugin-react": "^7.24.0",
     "jest": "^27.0.4",
+    "jest-expo": "^41.0.0",
     "react-test-renderer": "^17.0.2"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ]
+  }
 }
