--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   },
   "devDependencies": {
     "@react-native-community/eslint-config": "^2.0.0",
-    "eslint": "^7.28.0"
+    "eslint": "^7.28.0",
+    "supertest": "^6.1.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
