register controller wip

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cd client && yarn test"
+    "test": "npm run test:frontend && npm run test:backend",
+    "test:frontend": "cd client && yarn test",
+    "test:backend": "cd server && npm test"
   },
   "repository": {
     "type": "git",
