--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "supertest": "^6.1.3"
   },
   "scripts": {
-    "test": "jest --watch",
+    "test": "jest",
     "start": "nodemon index.js"
   },
   "jest": {
