--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "install:frontend": "cd client && yarn",
+    "install:backend": "cd server && npm install",
+    "install:subfolders": "npm run install:frontend && npm run install:backend",
     "test": "npm run test:frontend && npm run test:backend",
     "test:frontend": "cd client && yarn test",
     "test:backend": "cd server && npm test"
