--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-typescript-transformer": "^1.2.13",
     "react-native-web": "~0.13.12",
     "react-router-native": "^5.2.0",
     "rxjs": "^7.1.0"
@@ -44,12 +45,15 @@
     "@testing-library/jest-native": "^4.0.1",
     "@testing-library/react-native": "^7.2.0",
     "@testing-library/user-event": "^13.1.9",
+    "@types/react": "^17.0.11",
+    "@types/react-native": "^0.64.10",
     "babel-jest": "^27.0.2",
     "eslint": "^7.28.0",
     "eslint-plugin-react": "^7.24.0",
     "jest": "^27.0.4",
     "jest-expo": "^41.0.0",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "typescript": "^4.3.4"
   },
   "private": true,
   "jest": {
