--- a/client/package.json
+++ b/client/package.json
@@ -45,8 +45,10 @@
     "@testing-library/jest-native": "^4.0.1",
     "@testing-library/react-native": "^7.2.0",
     "@testing-library/user-event": "^13.1.9",
+    "@types/jest": "^26.0.23",
     "@types/react": "^17.0.11",
     "@types/react-native": "^0.64.10",
+    "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^27.0.2",
     "eslint": "^7.28.0",
     "eslint-plugin-react": "^7.24.0",
