--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.11",
     "@types/react-native": "^0.64.10",
+    "@types/react-router-native": "^5.1.0",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^27.0.2",
     "eslint": "^7.28.0",
