--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/dom": "^7.31.2",
     "axios": "^0.21.1",
     "expo": "~41.0.1",
@@ -35,7 +36,9 @@
     "react-native-screens": "~3.0.0",
     "react-native-typescript-transformer": "^1.2.13",
     "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.4",
     "react-router-native": "^5.2.0",
+    "redux": "^4.1.0",
     "rxjs": "^7.1.0"
   },
   "devDependencies": {
