--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ cache:
 before_script:
   - npm run install:subfolders
 script:
-  - cd client
-  - yarn tsc
+  - cd client && yarn tsc
+  - cd .. && npm test
