--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
   },
   "devDependencies": {
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/express": "^4.17.12",
     "eslint": "^7.28.0",
     "jest": "^27.0.4",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "typescript": "^4.3.4"
   },
   "scripts": {
     "test": "jest",
