--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/express": "^4.17.12",
+    "@types/node": "^15.12.4",
+    "@types/validator": "^13.1.4",
     "eslint": "^7.28.0",
     "jest": "^27.0.4",
     "supertest": "^6.1.3",
