--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2"
@@ -19,11 +20,12 @@
     "eslint": "^7.28.0",
     "jest": "^27.0.4",
     "supertest": "^6.1.3",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
   },
   "scripts": {
     "test": "jest",
-    "start": "nodemon index.js"
+    "start": "nodemon index.ts"
   },
   "jest": {
     "testEnvironment": "node"
