--- a/package.json
+++ b/package.json
@@ -21,8 +21,5 @@
   "bugs": {
     "url": "https://github.com/jonbrook/flora/issues"
   },
-  "homepage": "https://github.com/jonbrook/flora#readme",
-  "devDependencies": {
-    "@types/jest": "^26.0.23"
-  }
+  "homepage": "https://github.com/jonbrook/flora#readme"
 }
