--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,10 @@
   "devDependencies": {
     "@babel/preset-env": "^7.14.7",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^15.12.4",
     "@types/validator": "^13.1.4",
     "eslint": "^7.28.0",
