--- a/client/package.json
+++ b/client/package.json
@@ -54,9 +54,14 @@
     "@types/react-native": "^0.64.10",
     "@types/react-router-native": "^5.1.0",
     "@types/react-test-renderer": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
     "babel-jest": "^27.0.2",
     "eslint": "^7.28.0",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "jest": "^27.0.4",
     "jest-expo": "^41.0.0",
     "react-test-renderer": "^17.0.2",
