--- a/package.json
+++ b/package.json
@@ -21,5 +21,17 @@
   "bugs": {
     "url": "https://github.com/jonbrook/flora/issues"
   },
-  "homepage": "https://github.com/jonbrook/flora#readme"
+  "homepage": "https://github.com/jonbrook/flora#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
+  },
+  "dependencies": {
+    "typescript": "^4.3.4"
+  }
 }
