--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
     "@google-cloud/automl": "^2.4.2",
     "@google-cloud/vision": "^2.3.3",
     "@react-native-community/masked-view": "0.1.10",
